--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -62,6 +62,7 @@ index_mut = []
 into = ["syn/extra-traits"]
 into_iterator = []
 is_variant = ["dep:convert_case"]
+is_variant_and = ["dep:convert_case"]
 mul = ["syn/extra-traits"]
 mul_assign = ["syn/extra-traits"]
 not = ["syn/extra-traits"]
@@ -88,6 +89,7 @@ full = [
     "into",
     "into_iterator",
     "is_variant",
+    "is_variant_and",
     "mul",
     "mul_assign",
     "not",
