--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ sum = ["derive_more-impl/sum"]
 try_from = ["derive_more-impl/try_from"]
 try_into = ["derive_more-impl/try_into"]
 is_variant = ["derive_more-impl/is_variant"]
+is_variant_and = ["derive_more-impl/is_variant_and"]
 unwrap = ["derive_more-impl/unwrap"]
 try_unwrap = ["derive_more-impl/try_unwrap"]
 
@@ -89,6 +90,7 @@ full = [
     "into",
     "into_iterator",
     "is_variant",
+        "is_variant_and",
     "mul",
     "mul_assign",
     "not",
@@ -220,6 +222,11 @@ required-features = ["try_into"]
 name = "is_variant"
 path = "tests/is_variant.rs"
 required-features = ["is_variant"]
+
+[[test]]
+name = "is_variant_and"
+path = "tests/is_variant_and.rs"
+required-features = ["is_variant_and"]
 
 [[test]]
 name = "unwrap"
